--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>E-Invoice QR Code Encoder</title>
-    <!-- Add any additional meta tags, styles, or scripts here -->
 </head>
 <body>
     <div id="qrcode-container"></div>
 
-    <script src="js/e-invoice-encoder.js"></script>
-    <!-- Include other scripts or libraries you need here -->
+    <script src="e-invoice-encoder.js"></script>
 </body>
 </html>
