--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link ref="stylesheet" href="css/index.css">
     <title>E-Invoice QR Code Encoder</title>
 </head>
 <body>
+    <h1>The Qrcode was tested by E-Invoice QR reader KSA</h1>
+    <hr>
     <div id="qrcode-container"></div>
 
-    <script src="e-invoice-encoder.js"></script>
+    <script src="js/qrcode.min.js"></script>
+    <script src="js/e-invoice-encoder.js"></script>
 </body>
 </html>
